# research_pipelines

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: __init__.py  load_and_predict.ipynb  readme_helpers.py  simple_pipeline.py
src/research_pipelines/: __init__.py  core.py  dag.py  decorators.py  query.py  visualize.py
src/research_pipelines/backends/: __init__.py  base.py  manager.py  pickle_backend.py  wandb_backend.py
tests/: test_backends.py  test_core.py  test_dag.py  test_decorators.py  test_integration.py  test_readme_code_blocks.py
