[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-pipelines"
version = "0.1.5"
description = "Lightweight research project pipeline framework with DAG tracing"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Leander Kurscheidt" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core dependencies
    # wandb is optional, installed separately for those who need it
]
license = { file = "LICENSE" }

[project.optional-dependencies]
example = ["torch>=2.2.0"]
viz = ["matplotlib", "networkx"]
wandb = ["wandb>=0.15.0"]
dev = ["pytest>=9.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
